# chips

./: .chipsignore  .gitignore  Makefile  Readme.md  pyproject.toml  requirements.txt
chips/: .chips  __init__.py  __main__.py  add.py  basic_excludes.py  chip.py  main_service.py  remove.py  results.py
chips/commands/: add.py  remove.py  results.py  setup.py
chips/common/: basic_excludes.py  messages_service.py
chips/services/: chip.py  chipper.py  main.py  main_service.py
test_/: testcase1.py
test_/insio/: testcase2.py
